@@ -1,3 +1,8 @@
+2001-04-13  Lars J. Aas  <larsa@sim.no>
+
+	* acgeneral.m4 (_AC_OUTPUT_CONFIG_STATUS): Show options `--file'
+	and `--header' unconditionally.
+
 2001-04-13  Steven G. Johnson  <stevenj@alum.mit.edu>
 
 	* doc/autoconf.texi: Still more minor modifications for clarity,
